# googleHashCode2015

./: .gitignore  README.md  bootstrap.py  bootstrap.sh  c_flag_overrides.cmake  cxx_flag_overrides.cmake
ext/: .gitignore
ext/boost/: CMakeLists.txt
final/: .gitignore  CMakeLists.txt  Request.cpp  Request.h  Response.cpp  Response.h  SVGWriter.cpp  Slice.cpp  Slice.h  createClass.py  example.in  hashCodeSolver.cpp
final-test-round/: Assertion.h  Request.cpp  Request.h  Response.cpp  Response.h  SVGWriter.cpp  SVGWriter.h  createZip.bat  hashCodeSolver.cpp
final2014/: CMakeLists.txt  Request.cpp  Request.h  Result.cpp  Result.h  SVGWriter.cpp  SVGWriter.h  hashCodeSolver.cpp
final2014/tikz/: .gitignore  test.tex
libs/base/: CMakeLists.txt  Exception.h  SmallVector.h  Vector2d.h  algorithm.h  stringtools.h
libs/base/detail/: SmallVectorBase.h
libs/base/test/: SmallVectorTest.cpp  stringtoolsTest.cpp
python/: environment.py  tools.py
qualification/: CMakeLists.txt  cmake.py  createClass.py  createZip.bat
qualification/ext/boost/: Readme.txt
qualification/ext/gmock/: CMakeLists.txt
qualification/libs/: CMakeLists.txt
qualification/libs/base/detail/: SmallVectorBase-LLVM-support.h  Vector2d.hpp
qualification/libs/base/src/: Exception.cpp  SmallVector.cpp
qualification/libs/base/test/: Vector2dTest.cpp  algorithmTest.cpp
qualification/tools/: CMakeLists.txt
qualification/tools/hashsolver/: CMakeLists.txt  CSVParser.cpp  Coordinate.cpp  PlacedServer.cpp  PlacedServer.h  Server.h  Solution.cpp  example.txt  hashsolver.cpp
qualification/tools/hashsolver/test/: CSVParserTest.cpp  LineParserTest.cpp  PlacedServerTest.cpp  ServerTest.cpp
tools/hashsolver/: CSVParser.h  Canvas.cpp  Canvas.h  Command.cpp  Command.h  Coordinate.cpp  Coordinate.h  GreedySolver.cpp  GreedySolver.h  LineParser.cpp  LineParser.h  PlacedServer.cpp  PlacedServer.h  Request.cpp  Request.h  Server.cpp  Server.h  Solution.cpp  Solution.h  hashsolver.cpp
tools/hashsolver/test/: CanvasTest.cpp  CommandTest.cpp  CoordinateTest.cpp  GreedySolverTest.cpp  RequestTest.cpp  SolutionTest.cpp
